[gd_scene load_steps=8 format=3 uid="uid://cb8i8ex7nu341"]

[ext_resource type="Script" path="res://craftingMenu/craftingMenu.gd" id="1_smgqq"]
[ext_resource type="Theme" uid="uid://wccfd01vwnat" path="res://themes/craftingTheme.tres" id="1_w2ybt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4c1tg"]
bg_color = Color(0.164706, 0.231373, 0.286275, 1)
corner_radius_top_right = 28
corner_radius_bottom_right = 6
corner_radius_bottom_left = 12
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mwibw"]
bg_color = Color(0.164706, 0.231373, 0.286275, 1)
corner_radius_top_left = 8
corner_radius_top_right = 10
corner_radius_bottom_left = 6
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pua5r"]
bg_color = Color(0.164706, 0.231373, 0.286275, 1)
corner_radius_top_left = 10
corner_radius_top_right = 12
corner_radius_bottom_right = 4
corner_radius_bottom_left = 6
corner_detail = 1

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ysckr"]
lifetime_randomness = 0.25
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 60.0
gravity = Vector3(0, 294, 0)
initial_velocity_min = 384.0
initial_velocity_max = 512.0
angular_velocity_min = -360.0
angular_velocity_max = 360.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
damping_min = 50.0
damping_max = 50.0
scale_min = 8.0
scale_max = 8.0
color = Color(1, 0.423529, 0.180392, 1)
hue_variation_min = -0.13
hue_variation_max = 0.13

[sub_resource type="GDScript" id="GDScript_amno7"]
script/source = "extends GPUParticles2D;
var original=true
func _process(_delta):if !emitting&&!original&&!is_queued_for_deletion():queue_free()
"

[node name="craftMenu" type="CanvasLayer"]
layer = 8
visible = false
offset = Vector2(0, 24)
transform = Transform2D(1, 0, 0, 1, 0, 24)
script = ExtResource("1_smgqq")

[node name="PanelContainer" type="TabContainer" parent="."]
custom_minimum_size = Vector2i(768, 375)
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme = ExtResource("1_w2ybt")

[node name="Craft" type="HBoxContainer" parent="PanelContainer"]
clip_children = true
custom_minimum_size = Vector2i(0, 367)
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = 33.0
offset_right = -4.0
offset_bottom = -4.0

[node name="RecipeList" type="ItemList" parent="PanelContainer/Craft"]
offset_right = 189.0
offset_bottom = 367.0
size_flags_horizontal = 3
focus_mode = 0
item_count = 2
same_column_width = true
fixed_icon_size = Vector2i(32, 32)
item_0/text = "test"
item_1/text = "test2"

[node name="RecipeInfo" type="VBoxContainer" parent="PanelContainer/Craft"]
clip_contents = true
offset_left = 193.0
offset_right = 760.0
offset_bottom = 367.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="recipeName" type="Label" parent="PanelContainer/Craft/RecipeInfo"]
offset_right = 567.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_4c1tg")
text = "NameOf"
horizontal_alignment = 1

[node name="recipeQuantity" type="Label" parent="PanelContainer/Craft/RecipeInfo"]
offset_top = 48.0
offset_right = 567.0
offset_bottom = 72.0
theme_override_styles/normal = SubResource("StyleBoxFlat_mwibw")
text = "Manufactures: 1"
horizontal_alignment = 1

[node name="recipeInputLabel" type="Label" parent="PanelContainer/Craft/RecipeInfo"]
offset_top = 76.0
offset_right = 567.0
offset_bottom = 100.0
theme_override_styles/normal = SubResource("StyleBoxFlat_pua5r")
text = "Fabrication Materials:"
horizontal_alignment = 1

[node name="recipeInputs" type="ItemList" parent="PanelContainer/Craft/RecipeInfo"]
offset_top = 104.0
offset_right = 567.0
offset_bottom = 338.0
size_flags_vertical = 3
mouse_filter = 2
item_count = 1
same_column_width = true
fixed_icon_size = Vector2i(24, 24)
item_0/text = "Requires: 1"

[node name="ManufactureButton" type="Button" parent="PanelContainer/Craft/RecipeInfo"]
offset_top = 342.0
offset_right = 567.0
offset_bottom = 367.0
focus_mode = 0
mouse_filter = 1
action_mode = 0
text = "Manufacture"

[node name="Mod" type="HBoxContainer" parent="PanelContainer"]
visible = false
custom_minimum_size = Vector2i(0, 367)
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 29.0

[node name="RecipeInfo" type="VBoxContainer" parent="PanelContainer/Mod"]
visible = false
clip_contents = true
offset_left = 195.0
offset_right = 768.0
offset_bottom = 367.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="recipeName" type="Label" parent="PanelContainer/Mod/RecipeInfo"]
offset_right = 573.0
offset_bottom = 24.0
text = "NameOf"
horizontal_alignment = 1

[node name="Particles" type="Node2D" parent="."]

[node name="GpuParticles2d" type="GPUParticles2D" parent="Particles"]
position = Vector2(608, 470)
emitting = false
amount = 64
lifetime = 6.0
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_ysckr")
script = SubResource("GDScript_amno7")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="item_selected" from="PanelContainer/Craft/RecipeList" to="." method="loadRecipe"]
[connection signal="pressed" from="PanelContainer/Craft/RecipeInfo/ManufactureButton" to="." method="manufactureSelectedItem"]
[connection signal="timeout" from="Timer" to="." method="repeatPressTimeout"]
